# muon

./: Cargo.toml  README.md
.github/workflows/: build.yaml
morphix/: Cargo.toml  README.md
morphix/src/: lib.rs
morphix/src/general/: unsize.rs
morphix/src/helper/: shallow.rs
morphix/src/impls/: bound.rs  mod.rs
morphix/src/impls/collections/: binary_heap.rs  btree_set.rs  hash_set.rs  index_set.rs  linked_list.rs  mod.rs
morphix/src/impls/slices/: array.rs  helper.rs  linked_list.rs  mod.rs  range_set.rs  slice.rs  vec.rs  vec_deque.rs
morphix/src/impls/strings/: mod.rs  os_str.rs  os_string.rs  path.rs  path_buf.rs  str.rs  string.rs  url.rs
muon/: Cargo.toml  README.md
muon-derive/: Cargo.toml  README.md
muon-derive/fixtures/: output.rs
muon-derive/fixtures/input/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
muon-derive/fixtures/output/: basic.rs  deref.rs  enum_trivial.rs  generic.rs  tagged_adjacent.rs  tagged_external.rs  tagged_internal.rs  trivial.rs  untagged.rs
muon-derive/src/: lib.rs  observe.rs
muon-derive/src/derive/: enum.rs  meta.rs  mod.rs  snapshot.rs  struct.rs
muon-derive/tests/: deref.rs  enum.rs  observe.rs  struct.rs
muon-test-utils/: Cargo.toml
muon-test-utils/src/: lib.rs
muon/src/: batch.rs  error.rs  lib.rs  mutation.rs  observe.rs  path.rs
muon/src/adapter/: json.rs  mod.rs  yaml.rs
muon/src/general/: mod.rs  noop.rs  observer.rs  pointer.rs  shallow.rs  snapshot.rs  unsize.rs
muon/src/helper/: deref.rs  macros.rs  mod.rs  pointer.rs  quasi.rs  shallow.rs  unsigned.rs
muon/src/impls/: atomic.rs  bound.rs  cow.rs  deref.rs  mod.rs  newtype.rs  option.rs  range.rs  tuple.rs  weak.rs
muon/src/impls/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  index_map.rs  index_set.rs
muon/src/impls/slices/: array.rs  linked_list.rs  mod.rs  slice.rs  vec.rs  vec_deque.rs
muon/src/impls/strings/: c_str.rs  c_string.rs  mod.rs  os_str.rs  os_string.rs  path.rs  path_buf.rs  str.rs  string.rs  url.rs
muon/src/impls/wrappers/: bound.rs  cow.rs  deref.rs  mod.rs  newtype.rs  option.rs  range.rs  tuple.rs  weak.rs
