[package]
name = "morphix"
version = "0.19.1"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "Observing and serializing mutations"
repository = "https://github.com/shigma/morphix"
documentation = "https://docs.rs/morphix"

[features]
append = []
chrono = ["dep:chrono"]
default = ["append", "delete", "derive", "truncate"]
delete = ["morphix_derive/delete"]
derive = ["dep:morphix_derive"]
full = ["append", "delete", "derive", "json", "truncate", "yaml"]
indexmap = ["dep:cfg-version", "dep:indexmap"]
json = ["dep:serde_json"]
truncate = []
utf16 = []
utf8 = []
uuid = ["dep:uuid"]
yaml = ["dep:serde_yaml_ng"]

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
cfg-version = { version = "1.0.0", optional = true }
erased-serde = { version = "0.4.10" }
morphix_derive = { version = "0.18.3", path = "../morphix-derive", optional = true, default-features = false }
rustversion = { version = "1.0.22" }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

# Third party integrations
chrono = { version = "0.4", features = ["serde"], optional = true }
indexmap = { version = "2", features = ["serde"], optional = true }
uuid = { version = "1", features = ["serde"], optional = true }

[dev-dependencies]
morphix = { path = ".", features = ["chrono", "full", "indexmap", "utf8", "uuid"] }
morphix_test_utils = { path = "../morphix-test-utils" }
serde = { version = "1.0.228", features = ["derive"] }

# Third party integrations
chrono = { version = "0.4.43" }
indexmap = { version = "2.13.0" }
uuid = { version = "1.20.0" }
